[workspace.package]
  version           = "0.2.0"
  authors           = ["Maël Lefeuvre <mael.lefeuvre@mnhn.fr>"]
  description       = "GRUPS-rs: Get Relatedness Using Pedigree Simulations"
  readme            = "README.md"
  publish           = false

[package]
  name              = "grups"
  edition           = "2021" 
  version.workspace = true
  authors.workspace = true
  publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
  opt-level       = 3
  overflow-checks = true
  lto             = true     # Enable link-time optimization
  codegen-units   = 1        # Don't split compilation across multiple units.
  panic           = "abort"  # Suppress stack unwinding behavior, and let the OS deal with errors.

[profile.dev]
  opt-level       = 3
  overflow-checks = true
  panic           = "unwind"

[workspace]
  members = ["src/pwd_from_stdin", "src/pedigree_sims", "src/genome", "src/parser", "src/logger", "src/vcf-fst"]


[[bin]]
  name = "grups"
  path = "src/bin/main.rs"

#[[bin]]
#  name = "pwd_from_stdin"
#  path = "src/pwd_from_stdin/bin/main.rs"

#[[bin]]
#  name = "pedigree_sims"
#  path = "src/pedigree_sims/src/main.rs"

#[[lib]]
#  name = "vcf-fst"
#  path = "src/vcf-fst/src/main.rs"

[dependencies]
  pwd_from_stdin = {path = "src/pwd_from_stdin" }
  pedigree_sims  = {path = "src/pedigree_sims" }
  genome         = {path = "src/genome"}
  logger         = {path = "src/logger"}
  parser         = {path = "src/parser"}
  vcf-fst        = {path = "src/vcf-fst"}
  
  clap           = {version = "3.1.2", features = ["derive"]}
  log            = "0.4.16"
  fastrand       = "1.8.0"

  serde_yaml     = "0.8"


[dev-dependencies]
  tempfile       = "3.3.0"
  criterion      = "0.3"

  rand           = "0.8.5"
  nanorand       = "0.7.0"
  fastrand       = "1.8.0"

[[bench]]
  name = "pedigree_sims_bench"
  harness = false
