[workspace.package]
  version           = "0.2.0"
  authors           = ["Maël Lefeuvre <mael.lefeuvre@mnhn.fr>"]
  description       = "GRUPS-rs: Get Relatedness Using Pedigree Simulations"
  edition           = "2021"
  readme            = "README.md"
  publish           = false

[package]
  name              = "grups-rs"
  edition.workspace = true 
  version.workspace = true
  authors.workspace = true
  publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
  opt-level       = 3
  overflow-checks = false
  lto             = true     # Enable link-time optimization
  codegen-units   = 1        # Don't split compilation across multiple units.
  panic           = "abort"  # Suppress stack unwinding behavior, and let the OS deal with errors.

[profile.dev-release]         # dev, with additional performance
  inherits        = "dev"
  opt-level       = 3
  codegen-units   = 16

[workspace]
  members = [
    "src/pwd_from_stdin",
    "src/pedigree_sims",
    "src/genome",
    "src/genome/src/coordinate-derive",
    "src/parser",
    "src/logger",
    "src/vcf-fst",
    "src/located-error",
    "src/grups-io",
  ]


[[bin]]
  name = "grups-rs"
  path = "src/bin/main.rs"


[dependencies]
  pwd_from_stdin    = {path = "src/pwd_from_stdin" }
  pedigree_sims     = {path = "src/pedigree_sims" }
  genome            = {path = "src/genome"}
  coordinate-derive = {path = "src/genome/src/coordinate-derive"}
  grups-io          = {path = "src/grups-io"}
  logger            = {path = "src/logger"}
  parser            = {path = "src/parser"}
  vcf-fst           = {path = "src/vcf-fst"}
  located-error     = {path = "src/located-error"}
  
  clap           = {version = "3.2", features = ["derive"]}
  log            = "0.4.16"
  fastrand       = "1.8.0"
  serde_yaml     = "0.8"
  anyhow         = "1.0"
  thiserror      = "1.0"

[dev-dependencies]
  tempfile       = "3.3.0"
  criterion      = "0.3"

  rand           = "0.8.5"
  nanorand       = "0.7.0"
  fastrand       = "1.8.0"

  itertools    = "0.10.3"


[[bench]]
  name    = "pedigree_sims_bench"
  harness = false

[[bench]]
  name    = "bench_pileup"
  harness = false

[[bench]]
  name    = "bench_fst"
  harness = false
