[workspace.package]
  version           = "0.5.1"
  authors           = ["Maël Lefeuvre <mael.lefeuvre@mnhn.fr>"]
  description       = "GRUPS-rs: Get Relatedness Using Pedigree Simulations"
  edition           = "2021"
  readme            = "README.md"
  license           = "GPL-3.0-or-later"
  repository        = "https://github.com/MaelLefeuvre/grups-rs"
  publish           = false

[package]
  name                   = "grups-rs"
  rust-version           = "1.70.0"  # io::IsTerminal trait.
  edition.workspace      = true 
  version.workspace      = true
  authors.workspace      = true
  publish.workspace      = true
  license.workspace      = true
  repository.workspace   = true
  description            = "An ancient DNA genetic relatedness estimation software relying on pedigree simulations"
  keywords               = ["cli", "terminal", "bioinformatics", "genomics", "biology", "simulator"]

[[bin]]
  name = "grups-rs"
  path = "src/bin/main.rs"

[profile.release]
  debug = 0
  opt-level       = 3
  overflow-checks = false
  lto             = "fat"    # Enable link-time optimization
  codegen-units   = 1        # Don't split compilation across multiple units.
  panic           = "abort"  # Suppress stack unwinding behavior, and let the OS deal with errors.

[profile.dev-release]         # dev, with additional performance
  inherits        = "dev"
  opt-level       = 3
  codegen-units   = 16

[workspace]
  members = [
    "src/pwd_from_stdin",
    "src/pedigree_sims",
    "src/genome",
    "src/genome/src/coordinate-derive",
    "src/parser",
    "src/logger",
    "src/vcf-fst",
    "src/located-error",
    "src/grups-io",
  ]

[workspace.lints.clippy]
  cargo_common_metadata = "warn"
  pedantic = { level = "allow", priority = -1 }
  # ------ Contextual warns ------ #
  doc_markdown             = "allow"
  doc_link_with_quotes     = "warn"
  missing_errors_doc       = "allow"
  missing_panics_doc       = "allow"
  too_many_lines           = "allow"
  # ------ Definite allows  ------ #
  similar_names            = "allow" 
  cast_precision_loss      = "allow" # We can handle precision loss from usize -> f64
  match_bool               = "allow" 


[workspace.dependencies]
  coordinate-derive    = {path = "src/genome/src/coordinate-derive"}
  located-error        = {path = "src/located-error"}
  genome               = {path = "src/genome"}
  logger               = {path = "src/logger"}
  parser               = {path = "src/parser"}
  pwd_from_stdin       = {path = "src/pwd_from_stdin" }
  pedigree_sims        = {path = "src/pedigree_sims" }
  grups-io             = {path = "src/grups-io"}
  fastrand             = "2.0.0"
  ahash                = "0.8.5"
  thiserror            = "1.0"
  anyhow               = "1.0"
  log                  = "0.4.16"
  clap                 = {version = "3.2", features = ["derive"]}
  itertools            = "0.12.0"
  tempfile             = "3.3.0"
  serde_yaml           = "0.8"
  chrono               = "0.4"
  mockall              = "0.11.0"
  fst                  = "0.4"
  memmap2              = "0.5.10"
  gzp                  = "0.9.5"
  rayon                = "1.10.0"
  indicatif            = "0.17.11"
  indicatif-log-bridge = "0.2.3"
  parking_lot          = "0.12.4"

[dependencies]
  vcf-fst           = {path = "src/vcf-fst"}
  genome            = {workspace = true}
  coordinate-derive = {workspace = true}
  logger            = {workspace = true}
  parser            = {workspace = true}
  grups-io          = {workspace = true}
  located-error     = {workspace = true}  
  pwd_from_stdin    = {workspace = true}
  pedigree_sims     = {workspace = true}
  clap              = {workspace = true}
  log               = {workspace = true}
  fastrand          = {workspace = true}
  serde_yaml        = {workspace = true}
  anyhow            = {workspace = true}
  thiserror         = {workspace = true}
  [target.'cfg(not(target_env = "msvc"))'.dependencies]
  tikv-jemallocator = "0.5"

[dev-dependencies]
  tempfile          = {workspace = true}
  itertools         = {workspace = true}
  rand              = "0.8.5"
  nanorand          = "0.7.0"
  criterion         = "0.3"
  pretty_assertions = "1.4.1"

[[bench]]
  name    = "pedigree_sims_bench"
  harness = false

[[bench]]
  name    = "bench_pileup"
  harness = false

[[bench]]
  name    = "bench_fst"
  harness = false
