[package]
  name              = "genome"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
  name = "coordinate-derive"
  path = "tests/test-coordinate-derive.rs"

[dependencies]
  located-error     = {path = "../located-error" }
  coordinate-derive = {path = "src/coordinate-derive"}
  itertools         = "0.12.0"
  rust-lapper       = "1.0.0"
  log               = "0.4.16"
  anyhow            = "1.0"
  thiserror         = "1.0"
  ahash             = "0.8.5"

[dev-dependencies]
  float-cmp         = "0.9.0"
  rand              = "0.8.5"



