[package]
  name                 = "genome"
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lints]
  workspace = true

[[test]]
  name = "coordinate-derive"
  path = "tests/test-coordinate-derive.rs"

[dependencies]
  located-error     = {workspace = true}
  fastrand          = {workspace = true}
  coordinate-derive = {workspace = true}
  itertools         = {workspace = true}
  log               = {workspace = true}
  anyhow            = {workspace = true}
  thiserror         = {workspace = true}
  ahash             = {workspace = true}
  rust-lapper       = "1.0.0"

[dev-dependencies]
  float-cmp         = "0.9.0"
  tempfile          = {workspace = true}



