[package]
  name                 = "grups-io"
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lints]
  workspace = true

[dependencies]
  located-error  = {workspace = true}
  genome         = {workspace = true}
  log            = {workspace = true}
  fastrand       = {workspace = true}
  ahash          = {workspace = true}
  thiserror      = {workspace = true}
  anyhow         = {workspace = true}
  memmap2        = {workspace = true}
  fst            = {workspace = true}
  gzp            = {workspace = true}
  parking_lot    = {workspace = true}
  mockall        = {workspace = true} #@TODO: find a way to put this back in dev-dependencies 
  regex          = "1.5.0"
  lazy_static    = "1.4"

[dev-dependencies]
  tempfile          = {workspace = true}


