[package]
  name              = "located-error"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  thiserror    = "1.0"
  anyhow       = { version = "1.0", features = ["backtrace"] }
