[package]
  name                 = "located-error"
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lints]
  workspace = true

[dependencies]
  thiserror    = {workspace = true}
  anyhow       = {workspace = true, features = ["backtrace"] }
