[package]
  name              = "parser"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  name = "parser"
  path = "src/lib.rs"

[dependencies]
  located-error = {path = "../located-error"}
  clap          = {version = "3.2", features = ["derive"]}
  serde         = {version = "1.0",   features = ["derive"]} 
  atty          = "0.2" 
  serde_yaml    = "0.8"
  chrono        = "0.4"
  log           = "0.4.16"
  num           = "0.4.0"
  fastrand      = "1.8.0"
  thiserror     = "1.0"
  anyhow        = "1.0"



