[package]
  name              = "parser"
  rust-version      = "1.70.0"  # io::IsTerminal trait.
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
  name = "parser"
  path = "src/lib.rs"

[dependencies]
  located-error = {workspace = true}
  clap          = {workspace = true}
  chrono        = {workspace = true}
  log           = {workspace = true}
  fastrand      = {workspace = true}
  thiserror     = {workspace = true}
  anyhow        = {workspace = true}
  serde_yaml    = {workspace = true}
  serde         = {version = "1.0",   features = ["derive"]} 
  num           = "0.4.0"
  expanduser    = "1.2.0"
  