[package]
  name                 = "parser"
  rust-version         = "1.70.0"  # io::IsTerminal trait.
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lib]
  name = "parser"
  path = "src/lib.rs"

[lints]
  workspace = true

[dependencies]
  located-error = {workspace = true}
  clap          = {workspace = true}
  chrono        = {workspace = true}
  log           = {workspace = true}
  fastrand      = {workspace = true}
  thiserror     = {workspace = true}
  anyhow        = {workspace = true}
  serde_yaml    = {workspace = true}
  serde         = {version = "1.0",   features = ["derive"]} 
  num           = "0.4.0"
  expanduser    = "1.2.0"
  