[package]
  name              = "pwd_from_stdin"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  parser        = {path ="../parser"}
  genome        = {path ="../genome"}
  grups-io      = {path ="../grups-io"}
  located-error = {path = "../located-error" }
  itertools     = "0.12.0"
  rand          = "0.8.5"
  log           = "0.4.16"
  thiserror     = "1.0"
  anyhow        = "1.0"
  ahash         = "0.8.5"
