[package]
  name              = "pwd_from_stdin"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  parser        = {workspace = true}
  genome        = {workspace = true}
  grups-io      = {workspace = true}
  located-error = {workspace = true}
  itertools     = {workspace = true}
  fastrand      = {workspace = true}
  log           = {workspace = true}
  thiserror     = {workspace = true}
  anyhow        = {workspace = true}
  ahash         = {workspace = true}
