[package]
  name                 = "pwd_from_stdin"
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lints]
  workspace = true

[dependencies]
  parser        = {workspace = true}
  genome        = {workspace = true}
  grups-io      = {workspace = true}
  located-error = {workspace = true}
  itertools     = {workspace = true}
  fastrand      = {workspace = true}
  log           = {workspace = true}
  thiserror     = {workspace = true}
  anyhow        = {workspace = true}
  ahash         = {workspace = true}
