[package]
  name              = "vcf-fst"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  genome         = {path = "../genome"}
  pedigree_sims  = {path = "../pedigree_sims" }
  located-error  = {path = "../located-error"}
  grups-io       = {path = "../grups-io"}
  logger         = {path = "../logger"}
  parser         = {path = "../parser"}
  fst            = "0.4"
  log            = "0.4.16"
  rayon          = "1.5.2"
  thiserror      = "1.0"
