[package]
  name              = "vcf-fst"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  genome         = {workspace = true}
  pedigree_sims  = {workspace = true}
  located-error  = {workspace = true}
  grups-io       = {workspace = true}
  logger         = {workspace = true}
  parser         = {workspace = true}
  fst            = {workspace = true}
  log            = {workspace = true}
  thiserror      = {workspace = true}
  rayon          = "1.5.2"
