[package]
  name                 = "vcf-fst"
  version.workspace    = true
  authors.workspace    = true
  publish.workspace    = true
  edition.workspace    = true
  license.workspace    = true
  repository.workspace = true

[lints]
  workspace = true

[dependencies]
  genome         = {workspace = true}
  pedigree_sims  = {workspace = true}
  located-error  = {workspace = true}
  grups-io       = {workspace = true}
  logger         = {workspace = true}
  parser         = {workspace = true}
  fst            = {workspace = true}
  log            = {workspace = true}
  thiserror      = {workspace = true}
  rayon          = {workspace = true} # // MODIFIED

