[package]
  name              = "coordinate-derive"
  version.workspace = true
  authors.workspace = true
  publish.workspace = true
  edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
  proc-macro = true

[dependencies]
  syn              = "1.0"
  quote            = "1.0"
  proc-macro-crate = "1.2"